adding styling to search area

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
 
     <main>
-      <h1>Where do you want to go?</h1>
+      <h1>Find Weather &amp; Attractions</h1>
       <div class="search-box">
         <form autocomplete="off">
-          <input type="text" id="city">
-          <button id="button" type="submit">Submit</button>
+          <input type="text" id="city" placeholder="Enter a city (Portland, Or)">
+          <button id="button" type="submit">Search</button>
         </form>
       </div>
     </main>
