Added focus-within state to search bar

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </header>
 
     <main>
-      <h1>Find Weather &amp; Attractions</h1>
+      <h1>Check Weather &amp; Attractions</h1>
       <div class="search-box">
         <form autocomplete="off">
-          <input type="text" id="city" placeholder="Enter a city (Portland, Or)">
+          <input type="text" id="city" placeholder="Enter your destination (city or zipcode)">
           <button id="button" type="submit">Search</button>
         </form>
       </div>
