Styling weather results section

--- a/index.html
+++ b/index.html
@@ -26,36 +26,36 @@
 
     <div class="container">
 
-    <div id="destination">
+      <div id="destination">
+      </div>
+
+      <div class="sectiontitle">
+        <h2>WEATHER</h2>
+      </div>
+
+      <section id="weather" class="weather">
+        <div class="weather-card" id="weather1"></div>
+        <div class="weather-card" id="weather2"></div>
+        <div class="weather-card" id="weather3"></div>
+        <div class="weather-card" id="weather4"></div>
+      </section>
+
+      <div class="sectiontitle">
+        <h2>TOP ATTRACTIONS</h2>
+      </div>
+
+      <section id="venues">
+        <div class="venue" id="venue1"></div>
+        <div class="venue" id="venue2"></div>
+        <div class="venue" id="venue3"></div>
+      </section>
+
+      <footer>
+        <p>Designed and coded by <a href="http://dylanmacnab.com">Dylan Macnab</a></p>
+      </footer>
 
     </div>
 
-    <div class="sectiontitle">
-      <h2>WEATHER</h2>
-    </div>
-
-    <section id="weather">
-      <div class="weather" id="weather1"></div>
-      <div class="weather" id="weather2"></div>
-      <div class="weather" id="weather3"></div>
-      <div class="weather" id="weather4"></div>
-    </section>
-
-    <div class="sectiontitle">
-      <h2>TOP ATTRACTIONS</h2>
-    </div>
-
-    <section id="venues">
-      <div class="venue" id="venue1"></div>
-      <div class="venue" id="venue2"></div>
-      <div class="venue" id="venue3"></div>
-    </section>
-
-    <footer>
-      <p>Designed and coded by <a href="http://dylanmacnab.com">Dylan Macnab</a></p>
-    </footer>
-
-  </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="public/main.js"></script>
   </body>
