adding search icon to search bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h1>Check Weather &amp; Attractions</h1>
       <div class="search-box">
         <form autocomplete="off">
+          <img class="icon" src="https://png.icons8.com/metro/50/000000/search.png">
           <input type="text" id="city" placeholder="Enter your destination (city or zipcode)">
           <button id="button" type="submit">Search</button>
         </form>
