--- a/index.html
+++ b/index.html
@@ -30,22 +30,16 @@
       <div id="destination">
       </div>
 
-      <div class="sectiontitle">
-        <h2>WEATHER</h2>
-      </div>
-
-      <section id="weather" class="weather">
+      <h2 class="section-title">WEATHER</h2>
+      <section id="weather" class="weather row">
         <div class="weather-card" id="weather1"></div>
         <div class="weather-card" id="weather2"></div>
         <div class="weather-card" id="weather3"></div>
         <div class="weather-card" id="weather4"></div>
       </section>
 
-      <div class="sectiontitle">
-        <h2>TOP ATTRACTIONS</h2>
-      </div>
-
-      <section id="venues">
+      <h2 class="section-title">Top Attractions</h2>
+      <section id="venues" class="row">
         <div class="venue" id="venue1"></div>
         <div class="venue" id="venue2"></div>
         <div class="venue" id="venue3"></div>
