--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="weather-card" id="weather2"></div>
         <div class="weather-card" id="weather3"></div>
         <div class="weather-card" id="weather4"></div>
+        <div class="weather-card" id="weather5"></div>
+        <div class="weather-card" id="weather6"></div>
+        <div class="weather-card" id="weather7"></div>
       </section>
 
       <h2 class="section-title">Top Attractions</h2>
