--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
       </section>
 
       <h2 class="section-title">Top Attractions</h2>
-      <section id="venues" class="row">
+      <section id="venues" class="venues row">
         <div class="venue" id="venue1"></div>
         <div class="venue" id="venue2"></div>
         <div class="venue" id="venue3"></div>
+        <div class="venue" id="venue4"></div>
       </section>
 
       <footer>
