creating render of current weather conditions

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       <div id="destination">
       </div>
 
+      <h2 class="section-title">Current Weather</h2>
+      <section id="current">
+
+      </section>
+
       <h2 class="section-title">WEATHER</h2>
       <section id="weather" class="weather row">
         <div class="weather-card" id="weather1"></div>
