starting to add clothing feature

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
       </section>
 
+      <section id="outfit" style="padding: 40px 0;">
+
+      </section>
+
       <h2 class="section-title">WEATHER</h2>
       <section id="weather" class="weather row">
         <div class="weather-card" id="weather1"></div>
