added search feature and results

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
           <button id="button" type="submit">Search</button>
         </form>
       </div>
+
+      <div id="search-suggestions">
+      </div>
+
     </main>
 
     <div class="container">
 
-      <div id="destination">
-      </div>
+      <div id="destination"></div>
 
       <h2 class="section-title">Current Weather</h2>
       <section id="current">
