--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
           <input type="text" id="city" placeholder="Enter your destination (city or zipcode)">
           <button id="button" type="submit">Search</button>
         </form>
-      </div>
-
-      <div id="search-suggestions">
+        <div id="search-suggestions" class="search-suggestions">
+        </div>
       </div>
 
     </main>
