--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       <div class="search-box">
         <form autocomplete="off">
           <img class="icon" src="https://png.icons8.com/metro/50/000000/search.png">
-          <input type="text" id="city" placeholder="Enter your destination (city or zipcode)">
+          <input type="text" list="search-suggestions" id="city" placeholder="Enter your destination (city or zipcode)">
           <button id="button" type="submit">Search</button>
         </form>
-        <div id="search-suggestions" class="search-suggestions">
-        </div>
+        <!-- <datalist id="search-suggestions" class="search-suggestions"></datalist> -->
+        <datalist id="search-suggestions" class="search-suggestions"></datalist>
+
       </div>
 
     </main>
@@ -32,16 +33,20 @@
 
       <div id="destination"></div>
 
-      <h2 class="section-title">Current Weather</h2>
-      <section id="current">
-
+      <section class="grid-container weather-current">
+        <div class="current">
+          <h2 class="section-title">Current Weather</h2>
+          <div id="current">
+          </div>
+        </div>
+        <div class="outfit">
+          <h2 class="section-title">What to Wear</h2>
+          <div id="outfit" style="padding: 40px 0;">
+          </div>
+        </div>
       </section>
 
-      <section id="outfit" style="padding: 40px 0;">
-
-      </section>
-
-      <h2 class="section-title">WEATHER</h2>
+      <h2 class="section-title">7 Day Forecast</h2>
       <section id="weather" class="weather row">
         <div class="weather-card" id="weather1"></div>
         <div class="weather-card" id="weather2"></div>
@@ -50,14 +55,6 @@
         <div class="weather-card" id="weather5"></div>
         <div class="weather-card" id="weather6"></div>
         <div class="weather-card" id="weather7"></div>
-      </section>
-
-      <h2 class="section-title">Top Attractions</h2>
-      <section id="venues" class="venues row">
-        <div class="venue" id="venue1"></div>
-        <div class="venue" id="venue2"></div>
-        <div class="venue" id="venue3"></div>
-        <div class="venue" id="venue4"></div>
       </section>
 
       <footer>
