Adding really rough reverse geolocation feature

--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="public/main.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTpMGvNM2o4i-lcsQaMPhdoQt1SC3SIIM&callback=initMap"
+ type="text/javascript"></script>
   </body>
 </html>
