Added api call feature to detect location and return closest city name

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <main>
       <h1>Check Weather &amp; Attractions</h1>
+
+      <a id="find-my-location" class="find-my-location">
+        <h2 style="font-size: 15px; text-decoration: underline; margin-top: 10px;">Find My Location</h2>
+      </a>
       <div class="search-box">
         <form autocomplete="off">
           <img class="icon" src="https://png.icons8.com/metro/50/000000/search.png">
@@ -65,7 +69,5 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="public/main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTpMGvNM2o4i-lcsQaMPhdoQt1SC3SIIM&callback=initMap"
- type="text/javascript"></script>
   </body>
 </html>
