Adding broken ass cookie code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-      <h1>Check Weather &amp; Attractions</h1>
+      <h1 id="my-city">WEATHER OR NOT</h1>
 
       <a id="find-my-location" class="find-my-location">
         <h2 style="font-size: 15px; text-decoration: underline; margin-top: 10px;">Find My Location</h2>
