--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
 
-    <header>
+    <!-- <header>
       <h1 class="logo">&#9728; W-E-A-T-H-E-R-O-R-N-O-T &#9992;</h1>
-    </header>
+    </header> -->
 
     <main>
-      <h1 id="my-city">WEATHER OR NOT</h1>
+      <h1 id="my-city">Weather</h1>
 
       <a id="find-my-location" class="find-my-location">
         <h2 style="font-size: 15px; text-decoration: underline; margin-top: 10px;">Find My Location</h2>
@@ -26,7 +26,7 @@
           <input type="text" list="search-suggestions" id="city" placeholder="Enter your destination (city or zipcode)">
           <button id="button" type="submit">Search</button>
         </form>
-        <!-- <datalist id="search-suggestions" class="search-suggestions"></datalist> -->
+
         <datalist id="search-suggestions" class="search-suggestions"></datalist>
 
       </div>
