--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
   </head>
   <body>
 
-    <!-- <header>
-      <h1 class="logo">&#9728; W-E-A-T-H-E-R-O-R-N-O-T &#9992;</h1>
-    </header> -->
-
     <main>
       <h1 id="my-city">Weather</h1>
 
@@ -60,6 +56,8 @@
         <div class="weather-card" id="weather6"></div>
         <div class="weather-card" id="weather7"></div>
       </section>
+
+      <section style="padding: 40px 0;" id="recent-searches"></section>
 
       <footer>
         <p>Designed and coded by <a href="http://dylanmacnab.com">Dylan Macnab</a></p>
